[package]
edition = "2021"
name = "neutauri_bundler"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
gumdrop = "0.8"
inquire = "0.6"
neutauri_data = {path = "../neutauri_data", features = ["bundler"]}
new_mime_guess = "4.0"
serde = {version = "1.0", features = ["derive"]}
toml = "0.7"
wry = {version = "0.27", default-features = false, features = ["protocol", "tray", "transparent", "fullscreen", "devtools"]}

[target.'cfg(windows)'.dependencies]
rcedit = {git = "https://github.com/Tim-Paik/rcedit-rs.git", rev = "2805fca"}

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.winres]
FileDescription = "Neutauri Bundler"
LegalCopyright = "@2022 Neutauri Developers"
OriginalFilename = ""
ProductName = "Neutauri"
