[package]
edition = "2021"
name = "neutauri_data"
version = "0.1.0"

[dependencies]
bincode = "1.3"
brotli = "3.3"
image = {version = "0.24", optional = true}
new_mime_guess = {version = "4.0", optional = true}
serde = {version = "1.0", features = ["derive"]}
toml = {version = "0.5", optional = true}
wry = {version = "0.23", default-features = false, features = ["protocol", "tray", "transparent", "fullscreen"]}

[features]
bundler = ["new_mime_guess", "toml", "image"]
runtime = []