[package]
edition = "2021"
name = "neutauri_runtime"
version = "0.1.0"

[dependencies]
neutauri_data = {path = "../neutauri_data", features = ["runtime"]}
wry = {version = "0.16", default-features = false, features = ["protocol", "tray", "gtk-tray", "transparent", "fullscreen"]}

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.winres]
FileDescription = ""
FileVersion = ""
LegalCopyright = ""
OriginalFilename = ""
ProductName = ""
ProductVersion = ""
